src/test/ui/static/static-region-bound.nll.stderr
error[E0714]: temporary value dropped while borrowed
  --> $DIR/static-region-bound.rs:20:14
   |
LL |     let x = &id(3); //~ ERROR borrowed value does not live long enough
   |              ^^^^^ creates a temporary which is freed while still in use
LL |     f(x);
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0714`.
